tests/fixtures/errors/invalid_salt_block_mismatch.puml
@startsalt
login_widget
@enduml
